<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_post_like" translatable="false">Like</string>
    <string name="description_post_share" translatable="false">Share</string>
    <string name="description_post_save" translatable="false">Save</string>
    <string name="menu_remove">Delete</string>
    <string name="post_text" translatable="false">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>

    <string name="edit_text_hint">Post Text</string>
    <string name="description_by_back_text">No save</string>
    <string name="description_button_confirm">Confirm</string>
    <string name="description_button_back">Back</string>
    <string name="post_menu_edit">Edit</string>
    <string name="post_menu_remove">Remove</string>
    <string name="post_text_title">Title</string>
    <string name="post_text_time">Now</string>
    <string name="add_post">Add</string>

    <string name="chooser_share_post">My app for your share</string>

    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_sending_post">%1$s published a new post:</string>
    <string name="obscure_operation">Obscore operation</string>
    <string name="unknown_action">Unknown action</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>

    <string name="error_loading">Error loading</string>
    <string name="empty_posts">Posts not found</string>
    <string name="retry_loading">Retry loading</string>
    <string name="on_success">Success</string>
    <string name="on_failure">Error!</string>

    <string name="play_video">Play Video</string>

    <string name="new_post">Show new posts</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_author_name">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Repeat password</string>
    <string name="upload_avatar">Upload Avatar</string>
    <string name="error_password_not_ident">Password not ident</string>
    <string name="are_you_suare">Are you sure?</string>
    <string name="yes">Yup!</string>
    <string name="no">Nope!</string>
    <string name="eror_code">Error code</string>
    <string name="not_pass_enter">Неверный логин или пароль</string>
    <string name="action_not_allowed">Action not allowed for anonym</string>
    <string name="back">Back</string>
    <string name="hint_enter_name">Name</string>
    <string name="ad_description">Ad description</string>
    <string name="for_a_long_time_separator">For a long time</string>
    <string name="description_photo">description photo</string>
    <string name="remove">Remove</string>
    <string name="menu_save">Save</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="description_select_photo">Select photo</string>
</resources>
